Cambio para Render

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Movie Database</h1>
+        <h1 class="text-center">Pelis Repo!</h1>
         <h4 class="text-center">Cómputo en la Nube I</h4>
         <hr>
         <div class="container">
